Feature: Change text about me

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,37 +14,37 @@
   },
   "Home" : {
     "helloMessage": "Hello, i'm",
-    "desecription": "Software developer, living in Brasil.",
+    "desecription": "Software developer, living in Brazil.",
     "slogan": "Always trying learning something new."
   },
   "About": {
     "about": "About me",
     "aboutMe": {
-      "saudation": "Hi, I’m",
-      "whoami": ", a passionate software developer, living in Brasil, graduated with a",
+      "saudation": "Hi, i’m",
+      "whoami": ", a passionate software developer living in Brazil, with a",
       "graduation": "bachelor's degree in information systems.",
-      "particulars": "My goal is to make a difference by building applications that make a positive impact on people or the world, solving problems or making things easier, using programming.",
-      "slogan": "Seeking to be my best version, always looking for learn something new, new challenges and opportunities to develop myself.",
-      "thingsILike": "Fan of comics, mangas, rock, games, movies, series and animes, a complete geek."
+      "particulars": "My goal is to make a difference by building applications that have a positive impact on people or the world, solving problems or making tasks easier through programming.",
+      "slogan": "I constantly strive to be the best version of myself, always seeking to learn something new, embrace new challenges, and explore opportunities for personal growth.",
+      "thingsILike": "I'm an avid fan of comics, manga, rock music, games, movies, series and anime, a true geek."
     },
     "hardSkills": {
-      "text1": "I consider myself as ",
+      "text1": "I consider myself a ",
       "text2": "full-stack developer",
-      "text3": ", and i'm always improving to learn new technologies that helps me to solve problems or just make things easier.",
-      "text4": "My main focus these days is developing ",
+      "text3": " and i'm always improving to learning new technologies that help me to solve problems or streamline tasks.",
+      "text4": "Currently, my main focus is on developing ",
       "text5": "mobile",
       "text6": " or ",
-      "text7": "web applications on frontend",
-      "text8": " with responsive, pleasant designs that provides a good user experience and on ",
+      "text7": "web applications on the frontend",
+      "text8": " with responsive and pleasant designs that provide an excellent user experience. On the ",
       "text9": "backend",
-      "text10": " with the rules defined by the business implemented with a good performance and in a way that the data is transmitted correctly and securely.",
-      "text11": "Always seeking to apply ",
+      "text10": ", I ensure that the business rules are efficiently implemented with good performance and that data is transmitted correctly and securely.",
+      "text11": "Always strive to apply ",
       "text12": "good practices",
       "text13": ", which allow easy maintenance and simplicity in the readability of the code.",
-      "text14": "Here are a few technologies I’ve been working with recently:"
+      "text14": "Here are some technologies I have been working with recently:"
     },
     "softSkills": {
-      "text1": "I always try have a critical thinking and been ",
+      "text1": "I always try to have a critical thinking and been ",
       "text2": "creative",
       "text3": ", identify problems, thinking in different solutions, maintain a ",
       "text4": "good communication",
@@ -52,12 +52,12 @@
       "text6": "flexible",
       "text7": " and ",
       "text8": "resilient",
-      "text9": " to adapt myself in any circumstances, be ",
+      "text9": ", adapting well to various circumstances, be ",
       "text10": "proactive",
-      "text11": ", evaluating scenarios and finding ways to resolve issues that impede results or hinder productivity.",
-      "text12": "I work well in team, i believe it is important to discuss ways to solve determined problem, after all, there always more than one, i like to hear people's ideas and opinions, mostly when is different than mine, is always a good way to learn and grow up, and i think that ",
+      "text11": " in evaluating situations to resolve issues that may impede progress or hinder productivity.",
+      "text12": "I enjoy working in a team and strongly believe in discussing multiple approaches to solving specific problems. I value hearing people's ideas and opinions, particularly when they differ from mine, as it offers an excellent opportunity to learn and grow, in my opinion ",
       "text13": "collaborate ",
-      "text14": "is the most important skill for those who work with knologment.",
+      "text14": "is the most crucial skill for those working with knowledge.",
       "card": {
         "adaptability": "Adaptability",
         "creativity": "Creativity",
