--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -23,39 +23,39 @@
       "saudation": "Olá, eu sou",
       "whoami": ", um desenvolvedor de software, residindo no Brasil, graduado como",
       "graduation": "bacharel em sistemas de informação.",
-      "particulars": "Meu objetivo é fazer a diferença construindo aplicações que causem um impacto positivo nas pessoas ou no mundo, resolvendo problemas ou facilitando as coisas, utilizando programação.",
-      "slogan": "Buscando ser minha melhor versão, sempre procurando aprendendendo algo novo, novos desafios e oportunidades para me desenvolver.",
-      "thingsILike": "Fan de comics, mangas, rock, jogos, filmes, series e animes, um nerd completo."
+      "particulars": "Meu objetivo é fazer a diferença construindo aplicações que tenham um impacto positivo nas pessoas ou no mundo, resolvendo problemas e tornando as coisas mais fáceis por meio da programação.",
+      "slogan": "Busco constantemente ser a melhor versão de mim mesmo, sempre em busca de aprender algo novo, encarar novos desafios e aproveitando oportunidades para me desenvolver.",
+      "thingsILike": "Sou fã de quadrinhos, mangás, rock, jogos, filmes, séries e animes, um verdadeiro nerd."
     },
     "hardSkills": {
-      "text1": "Eu me considero um ",
+      "text1": "Me considero um ",
       "text2": "desenvolvedor full-stack",
-      "text3": ", estou sempre buscando aprender novas tecnologias que me ajudem a resolver problemas ou apenas facilitem as coisas.",
+      "text3": ", estou sempre me aprimorando para aprender novas tecnologias que me ajudem a resolver problemas ou simplifiquem as tarefas.",
       "text4": "Meu foco principal atualmente é o desenvolvimento ",
       "text5": "mobile",
       "text6": " ou ",
       "text7": "aplicativos web no frontend",
-      "text8": " com designs responsivos e agradáveis ​​que proporcionem uma boa experiência ao usuário e no ",
+      "text8": " com designs responsivos e agradáveis ​​que proporcionem uma boa experiência ao usuário, e no ",
       "text9": "backend",
-      "text10": " com as regras definidas pelo negócio implementadas com um bom desempenho e de forma que os dados sejam transmitidos de forma correta e segura.",
-      "text11": "Sempre buscando utilizar ",
+      "text10": ", implementando as regras definidas pelo negócio com bom desempenho e garantindo a transmissão correta e segura dos dados.",
+      "text11": "Sempre buscando aplicar ",
       "text12": "boas práticas",
       "text13": ", que permitem uma fácil manutenção e simplicidade na legibilidade do código.",
-      "text14": "Aqui estão algumas tecnologias com as quais tenho trabalhado recentemente:"
+      "text14": "Aqui estão algumas tecnologias que tenho trabalhado recentemente:"
     },
     "softSkills": {
-      "text1": "Eu sempre tento ter um pensamento crítico e ser ",
+      "text1": "Sempre busco ter um pensamento crítico e ",
       "text2": "criativo",
-      "text3": ", identificar problemas, pensar em diferentes soluções, manter uma ",
+      "text3": ", identificar problemas e pensar em diferentes soluções. Me esforço para manter uma ",
       "text4": "boa comunicação",
-      "text5": ", passando feedbacks, buscando ser ",
+      "text5": ", fornecendo feedbacks e buscando ser ",
       "text6": "flexível",
       "text7": " e ",
       "text8": "resiliente",
-      "text9": " para me adaptar em qualquer circunstância, ser ",
+      "text9": " para me adaptar a qualquer circunstância. Busco ser ",
       "text10": "proativo",
-      "text11": ", avaliando cenários e encontrando formas de resolver problemas que impedem resultados ou atrapalham a produtividade.",
-      "text12": "Trabalho bem em equipe, acredito que é importante discutir formas de resolver determinados problemas, afinal sempre tem mais de uma, gosto de ouvir as ideias e opiniões das pessoas, principalmente quando são diferentes da minha, é sempre uma boa forma de aprender e crescer, eu penso que ",
+      "text11": ", avaliando cenários e encontrando maneiras de resolver problemas que impedem resultados ou prejudicam a produtividade.",
+      "text12": "Trabalho bem em equipe, pois acredito que é importante discutir maneiras de resolver problemas, afinal, sempre há mais de uma abordagem. Gosto de ouvir as ideias e opiniões das pessoas, especialmente quando são diferentes das minhas, pois considero que ",
       "text13": "colaborar",
       "text14": " é a habilidade mais importante para quem trabalha com conhecimento.",
       "card": {
